# MonteaScan

./: .gitattributes  .gitignore  Cargo.toml  package-lock.json
app/: package-lock.json
app/src/: index.html  main.ts  styles.scss
app/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
app/src/app/vulns/: vulns.component.html  vulns.component.scss  vulns.component.spec.ts  vulns.component.ts
gui/app/: package-lock.json  package.json
gui/app/app/: error.tsx  footer.tsx  header.tsx  layout.tsx  loading.tsx  main.tsx  not-found.tsx  page.tsx  provider.tsx
gui/app/app/components/: Drawer.tsx  Info.tsx  ServerList.tsx  info.scss  info.tsx  page.tsx  serverList.scss  serverList.tsx
gui/app/app/config/: configList.tsx  page.tsx
gui/app/app/dashboard/: areaChart.tsx  bubbleChart.tsx  doughnutChart.tsx  groupedBarChart.tsx  horizontalBarChart.tsx  horizontalBarChart2.tsx  lineChart.tsx  lineChart2.tsx  multiLineChart.tsx  multiTypeChart.tsx  page.tsx  polarChart.tsx  radarChart.tsx  scatterChart.tsx  stackedBarChart.tsx  verticalBarChart.tsx
gui/app/app/server/: page.tsx  serverList.scss  serverList.tsx
gui/app/app/setting/: settingList.tsx
gui/app/app/settings/: page.tsx  settingList.tsx
gui/app/app/sort/: page.tsx
gui/app/app/types/: configTypes.tsx  cpeTypes.tsx  cveTypes.tsx  hostTypes.tsx  impactTypes.tsx  pkgTypes.tsx  serverTypes.tsx  settingTypes.tsx
gui/app/app/vulns/: vulnsList.tsx
html/: index.css  index.css.map  index.html  index.js  index.scss
src/: jvn.rs  main.rs  nvd.rs  scanner.rs  server.rs
src/oval/: rhel.rs
tmp/: angular.txt  cert.txt  config.json  cwe.txt  err.txt  format.txt  format2.txt  mongodb.txt  os.txt  react.txt  request.txt  rif  rust.txt  ssh.txt  sshd.txt  test.drawio  test.md  ubuntu.txt  url.txt  wasm.txt
web/app/: jameslist.json  package-lock.json  package.json
web/app/app/: Footer.tsx  Header.tsx  Main.tsx  Provider.tsx  error.tsx  footer.tsx  header.tsx  layout.tsx  loading.tsx  page.tsx  provider.tsx  types.tsx
(+35 files in other folders)
